feat: 🎸 Rest of the owl

--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     ]
   },
   "dependencies": {
+    "date-fns": "^2.25.0",
     "fathom-client": "^3.1.0",
     "next": "^11.1.0",
     "next-seo": "^4.26.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-textfit": "^1.1.1",
+    "string-to-color": "^2.2.2",
+    "tinycolor2": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -37,6 +41,7 @@
     "@next/eslint-plugin-next": "^11.1.0",
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
+    "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
